--- a/ru/kdenlive.po
+++ b/ru/kdenlive.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: Kdenlive\n"
 "Report-Msgid-Bugs-To: https://bugs.kde.org\n"
 "POT-Creation-Date: 2020-03-03 03:13+0100\n"
-"PO-Revision-Date: 2020-03-03 22:52+0300\n"
+"PO-Revision-Date: 2020-03-04 01:22+0300\n"
 "Last-Translator: Смольянинов Николай <smolianinow.colya2016@yandex.ru>\n"
 "Language-Team: Russian <kde-russian@lists.kde.ru>\n"
 "Language: ru\n"
@@ -2972,7 +2972,7 @@ msgstr "Режим края"
 #: data/effects/frei0r_select0r.xml:74
 #, kde-format
 msgid "Hard,Fat,Normal,Skinny,Slope"
-msgstr "Жёсткий,Жирный,Обычный,Тонкий,С наклоном"
+msgstr "Жёсткий,Жирный,Обычный,Тонкий,Гладкий"
 
 #: data/effects/frei0r_select0r.xml:91
 #, kde-format
