--- a/ru/kdenlive.po
+++ b/ru/kdenlive.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: Kdenlive\n"
 "Report-Msgid-Bugs-To: https://bugs.kde.org\n"
 "POT-Creation-Date: 2020-03-04 03:19+0100\n"
-"PO-Revision-Date: 2020-03-04 16:20+0300\n"
+"PO-Revision-Date: 2020-03-05 01:29+0300\n"
 "Last-Translator: Смольянинов Николай <smolianinow.colya2016@yandex.ru>\n"
 "Language-Team: Russian <kde-russian@lists.kde.ru>\n"
 "Language: ru\n"
@@ -899,7 +899,7 @@ msgstr "Заливка изображением или чёрным"
 #: data/effects/frei0r_alpha0ps.xml:4 data/effects/frei0r_alpha0ps.xml:36
 #, kde-format
 msgid "Alpha operations"
-msgstr "Операции с Альфа"
+msgstr "Операции с альфа"
 
 #: data/effects/frei0r_alpha0ps.xml:5 data/effects/frei0r_alpha0ps.xml:37
 #, kde-format
@@ -966,7 +966,7 @@ msgstr "Сжать/Растянуть/Размыть"
 #: data/effects/frei0r_alphagrad.xml:3
 #, kde-format
 msgid "Alpha gradient"
-msgstr "Градиент Альфа"
+msgstr "Градиент альфа"
 
 #: data/effects/frei0r_alphagrad.xml:4
 #, kde-format
@@ -2096,8 +2096,8 @@ msgstr "Порог насыщенности"
 #, kde-format
 msgid "None, De-Key, Target, Desaturate, Luma adjust"
 msgstr ""
-"Без операции,Без ключевого цвета,Целевой цвет,Обесцвечивание,Скорректировать "
-"яркость"
+"Без операции,Без ключевого цвета,Целевой цвет,Обесцвечивание,Коррекция "
+"яркости"
 
 #: data/effects/frei0r_keyspillm0pup.xml:38
 #, kde-format
@@ -2534,7 +2534,7 @@ msgstr "Создание карты яркости изображения"
 #: data/effects/frei0r_mask0mate.xml:3
 #, kde-format
 msgid "Rectangular Alpha mask"
-msgstr "Прямоугольная Альфа маска"
+msgstr "Прямоугольная альфа маска"
 
 #: data/effects/frei0r_mask0mate.xml:4
 #, kde-format
@@ -2942,7 +2942,7 @@ msgstr "Зелёный / Насыщенность дельта"
 #: data/effects/frei0r_select0r.xml:25 data/effects/frei0r_select0r.xml:87
 #, kde-format
 msgid "Blue / Intensity Delta"
-msgstr "Синий / Яркость дельта"
+msgstr "Синий / Светлота дельта"
 
 #: data/effects/frei0r_select0r.xml:29 data/effects/frei0r_select0r.xml:64
 #, kde-format
@@ -4280,7 +4280,7 @@ msgstr "Цветность в канале V"
 #: data/effects/shape.xml:3
 #, kde-format
 msgid "Shape Alpha"
-msgstr "Фигура Альфа"
+msgstr "Фигура альфа"
 
 #: data/effects/shape.xml:4
 #, kde-format
@@ -4880,8 +4880,8 @@ msgid ""
 "Generate frames with a counter and synchronized tone. The counter can go up "
 "or down."
 msgstr ""
-"Генерировать кадры со счётчиком и синхронизировать с тоном. Счётчик может "
-"отсчитывать и вперёд и назад."
+"Генерирует кадры счётчика синхронно с тоном. Счётчик отсчитывает время как "
+"назад, так и вперёд."
 
 #: data/generators/count.xml:7
 #, kde-format
@@ -4891,12 +4891,12 @@ msgstr "Отсчёт вперёд"
 #: data/generators/count.xml:10
 #, kde-format
 msgid "No background"
-msgstr "Эффект фона"
+msgstr "Без фона"
 
 #: data/generators/count.xml:13
 #, kde-format
 msgid "Seconds to 0,Seconds to 1,Frames,Timecode,Clock"
-msgstr "Секунды до 0,Секунды до 1,Кадры,Тайм-код,Часы"
+msgstr "Секунды от/до 0,Секунды от/до 1,Кадры,Тайм-код,Часы"
 
 #: data/generators/count.xml:14
 #, kde-format
@@ -4906,7 +4906,7 @@ msgstr "Тема счётчика"
 #: data/generators/count.xml:17
 #, kde-format
 msgid "Silent,1kHz beep before end,1kHz beep each second"
-msgstr "Без звука,1кГц сигнал до конца,1кГц сигнал каждую секунду"
+msgstr "Без звука,1кГц постоянный сигнал,1кГц сигнал каждую секунду"
 
 #: data/generators/count.xml:18
 #, kde-format
@@ -4934,8 +4934,9 @@ msgid ""
 "PAL color bars,PAL color bars with red,95% BBC color bars,75% EBU color bars,"
 "SMPTE color bars,Philips PM5544,FuBK,Simplified FuBK"
 msgstr ""
-"PAL цветные полосы,PAL цветные полосы с красным,95% BBC цветных полос,75% "
-"EBU цветных полос,SMPTE цветных полос,Philips PM5544,FuBK,Упрощенное FuBK"
+"Цветные полосы PAL,Цветные полосы PAL с красным,Цветные полосы BBC 95%,"
+"Цветные полосы EBU 75%,Цветные полосы SMPTE,Philips PM5544,FuBK,Упрощенные "
+"FuBK"
 
 #: data/generators/frei0r_test_pat_b.xml:8
 #, kde-format
@@ -4945,7 +4946,7 @@ msgstr "Тип цветных полос"
 #: data/generators/noise.xml:3
 #, kde-format
 msgid "White Noise"
-msgstr "Шум"
+msgstr "Белый шум"
 
 #: data/generators/noise.xml:4
 #, kde-format
@@ -8591,9 +8592,9 @@ msgstr "Сохранить эффект"
 
 #: src/effects/effectstack/view/collapsibleeffectview.cpp:184
 #: src/effects/effectstack/view/effectstackview.cpp:444
-#, fuzzy, kde-format
+#, kde-format
 msgid "Save Effect Stack"
-msgstr "Сохранить стек эффектов"
+msgstr "Сохранить стек эффекта"
 
 #: src/effects/effectstack/view/collapsibleeffectview.cpp:189
 #, kde-format
@@ -8606,9 +8607,9 @@ msgid "Name for saved effect: "
 msgstr "Имя сохраняемого эффекта: "
 
 #: src/effects/effectstack/view/effectstackview.cpp:444
-#, fuzzy, kde-format
+#, kde-format
 msgid "Name for saved stack: "
-msgstr "Имя для сохранённого стека: "
+msgstr "Имя сохраняемого стека: "
 
 #: src/hidetitlebars.cpp:21
 #, kde-format
