--- a/ru/kdenlive.po
+++ b/ru/kdenlive.po
@@ -19,14 +19,14 @@ msgstr ""
 "Project-Id-Version: Kdenlive\n"
 "Report-Msgid-Bugs-To: https://bugs.kde.org\n"
 "POT-Creation-Date: 2020-11-23 02:18+0100\n"
-"PO-Revision-Date: 2020-11-23 17:26+0300\n"
+"PO-Revision-Date: 2020-11-23 19:56+0300\n"
 "Last-Translator: Смольянинов Николай <smolianinow.colya2016@yandex.ru>\n"
 "Language-Team: Russian <kde-russian@lists.kde.ru>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 2.4.2\n"
 "Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
 "%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
@@ -184,7 +184,7 @@ msgstr "Цвет спектра звука."
 #: data/effects/audiospectrum.xml:21 data/effects/audiowaveform.xml:12
 #, kde-format
 msgid "Line Thickness"
-msgstr "Жирность строк"
+msgstr "Толщина линий"
 
 #: data/effects/audiospectrum.xml:22
 #, kde-format
@@ -192,8 +192,8 @@ msgid ""
 "The thickness of the line used to draw the waveform for line graph. The "
 "thickness of the bar for bar graph."
 msgstr ""
-"Жирность строк, используется для построения звукового спектра в виде "
-"линейного графика. Жирность строк для гистограммы."
+"Толщина линий, используется для построения звукового спектра в виде "
+"линейного графика. Толщина линий гистограммы."
 
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: data/effects/audiospectrum.xml:25 src/ui/gradientedit_ui.ui:96
